--- a/style.css
+++ b/style.css
@@ -735,22 +735,22 @@ input[type="checkbox"]:focus-visible + label::before {
 }
 
 /* --- Cores para os Cabeçalhos dos Grupos de Ações --- */
-.action-checkbox-group .collapsible-fieldset:nth-of-type(1) .collapsible-summary-inner {
+.group-shortcuts .collapsible-summary-inner {
     color: var(--group-color-1);
 }
-.action-checkbox-group .collapsible-fieldset:nth-of-type(2) .collapsible-summary-inner {
+.group-system .collapsible-summary-inner {
     color: var(--group-color-2);
 }
-.action-checkbox-group .collapsible-fieldset:nth-of-type(3) .collapsible-summary-inner {
+.group-interface .collapsible-summary-inner {
     color: var(--group-color-3);
 }
-.action-checkbox-group .collapsible-fieldset:nth-of-type(4) .collapsible-summary-inner {
+.group-browser .collapsible-summary-inner {
     color: var(--group-color-4);
 }
-.action-checkbox-group .collapsible-fieldset:nth-of-type(5) .collapsible-summary-inner {
+.group-peripherals .collapsible-summary-inner {
     color: var(--group-color-5);
 }
-.action-checkbox-group .collapsible-fieldset:nth-of-type(6) .collapsible-summary-inner {
+.group-remote .collapsible-summary-inner {
     color: var(--group-color-6);
 }
 
